add .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,19 @@ Makefile.in
 /missing
 /stamp-h1
 
+### Python template
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
+
